# TFG-OMR

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml  run_full_pipeline.sh
.claude/skills/betterCode/: SKILL.md
.github/: copilot-instructions.md
.github/agents/: TFG agent.agent.md
data/: Datasets_investigar.md
docs/: api.md  cli.md  configuration.md  data_pipeline.md  index.md  inference_pipeline.md  lmx_format.md  model.md  notebooks.md  overview.md  training.md
docs/experiments/: 2026-06-10-volume-collapse-findings.md
docs/gep/E1/: E1.tex  references.bib
docs/main/: main.tex  tfg.sty
latex_documents/: apunts.md  omr_pipeline.md
latex_documents/defense/: .latexmkrc  GUIO.md  defense.tex
latex_documents/main/: CLAUDE.md  THESIS_REVIEW.md  main.tex  references.bib  tfg.sty
latex_documents/progress_review/: Rubric.md  Rules.md  progress_review.tex
models/staff_reject/: thresholds.json
notebooks/: 02_evaluate_model.ipynb  04_pipeline_walkthrough.ipynb  simple_baseline.ipynb
scripts/: _chord_eval_results.json  _find_melodic_worst.py  _gen_defense_figures.py  _gen_melodic_worst_figure.py  _gen_satin_figures.py  _gen_ser_distribution.py  _gen_token_error_figs.py  _gen_worst_figures.py  audit_lmx_corpus.py  build_reject_label_set.py  evaluate_chord.py  evaluate_full.py  omr_pipeline_ab.py  validate_lmx_pairs.py
scripts/twin_reconstruction/: legacy_generate_headerless_twins.py  legacy_generate_realbook.py  reconstruct_split.py  render_twins.py
src/: __init__.py  cli.py  style.py
src/CRNN_CTC/: __init__.py  chord_dataset.py  chord_finetune.py  chord_train.py  config.py  dataset.py  evaluate.py  lilypond_render.py  model.py  train.py  training_utils.py  vocab.py  vocabulary.txt
src/api/: __init__.py  main.py
src/data_processing/: __init__.py  augment_scanned.py  chord_render.py  extract_real_chord_strips.py  extract_real_music_strips.py  generate_chord_crops.py  generate_header_templates.py  generate_headerless_twins.py  generate_realbook.py  semantic_to_lmx.py  test1.py
src/omr_pipeline/: __init__.py  _bootstrap.py  chord_postprocess.py  chord_recognizer.py  grammar_fix.py  header_injector.py  inference.py  ocr_chords.py  pipeline.py  preprocess.py  router.py  slicer.py  staff_detect.py  staff_reject.py
static/: chord_labeler.html  index.html  music_labeler.html  reject_labeler.html
tests/: conftest.py  test_dataset_aug.py  test_header_injector.py
(+51 files in other folders)
